# crewAI

menu_planner/: Menu.md  README.md  calorieTracking.md  pyproject.toml  recipeRecommendation.md  userInteraction.md
menu_planner/src/menu_planner/: crew.py  main.py
menu_planner/src/menu_planner/config/: agents.yaml  tasks.yaml
menu_planner/src/menu_planner/tools/: custom_tool.py
